jedan deo za rezervaciju

--- a/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
@@ -43,7 +43,7 @@
         <h2>Select Reservation Date</h2>
         <app-calendar
           [apartment]="data.accommodation"
-          (reservedDaysNumChange)="updateReservedDaysNum($event)"
+          (reservedDaysLstChange)="updateReservedDaysNum($event)"
           (fullPriceNum)="updateFullPrice($event)"
         ></app-calendar>
 
