prikazuje na kalendaru da li je cena per unit/guest

--- a/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
@@ -36,8 +36,7 @@
 
         <p><strong>Selected days:</strong> {{ reservedDaysNum }} </p>
         <p>
-          <strong>Price: {{fullPrice}} €</strong>
-          <small>  {{accommodation.pricingMethod  | pricingMethodFormat}}</small>
+          <strong>Full Price: {{fullPrice}} €</strong>
         </p>
         <p></p>
 
