--- a/frontend/src/app/features/apartment/calendar/calendar.component.html
+++ b/frontend/src/app/features/apartment/calendar/calendar.component.html
@@ -16,11 +16,15 @@
            (mouseover)="onMouseOver(date)">
 
         <span class="date">{{ date.getDate() }}</span>
+
         <p *ngIf="specialPrices[getFormattedDate(date)]">
           <small class="price">Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}</small>
+          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
         </p>
+
         <p *ngIf="!specialPrices[getFormattedDate(date)]">
-          <small class="price">Price: €{{apartment.defaultPrice}} </small>
+          <small class="price">Price: €{{apartment.defaultPrice}}</small>
+          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
         </p>
 
       </div>
