--- a/frontend/src/app/features/apartment/calendar/calendar.component.css
+++ b/frontend/src/app/features/apartment/calendar/calendar.component.css
@@ -133,3 +133,11 @@
   list-style-type: none;
   padding: 0;
 }
+
+.smaller-text {
+  font-size: 0.7em;
+  display: block;
+  color: inherit;
+}
+
+
