--- a/frontend/src/app/features/reservation/reservation-history/reservation-history.component.html
+++ b/frontend/src/app/features/reservation/reservation-history/reservation-history.component.html
@@ -16,6 +16,7 @@
       'pending': rezervacija.status === 'PENDING',
       'accepted': rezervacija.status === 'ACCEPTED',
       'rejected': rezervacija.status === 'REJECTED',
+      'declinded': rezervacija.status === 'DECLINED',
       'stara-rezervacija': isPastReservation(rezervacija.startDate),
       'aktivna-rezervacija': !isPastReservation(rezervacija.startDate)
     }" *ngFor="let rezervacija of filtriraneRezervacije()">
@@ -44,7 +45,7 @@
       </div>
       <div class="dugmad">
         <button
-          *ngIf="rezervacija.status === 'ACCEPTED' && !isPastReservation(rezervacija.startDate)"
+          *ngIf="rezervacija.status === 'PENDING' && !isPastReservation(rezervacija.startDate)"
           (click)="odbijRezervaciju(rezervacija)"
           class="btn btn-odbij">
           Odbij rezervaciju
@@ -52,9 +53,14 @@
 
         <span *ngIf="rezervacija.status === 'REJECTED'" class="status-odbijena">Odbijena rezervacija</span>
 
+        <span *ngIf="rezervacija.status === 'DECLINED'" class="status-otkazana">Otkazana rezervacija</span>
+
+
         <button *ngIf="!(rezervacija.status === 'ACCEPTED' && !isPastReservation(rezervacija.startDate))"
                 (click)="obrisiRezervaciju(rezervacija)"
                 class="btn btn-obrisi">Obriši</button>
+
+
       </div>
     </div>
   </div>
