--- a/frontend/src/app/features/reservation/reservation-review-component/reservation-review-component.component.css
+++ b/frontend/src/app/features/reservation/reservation-review-component/reservation-review-component.component.css
@@ -1,26 +1,3 @@
-.filter-container {
-  display: flex;
-  gap: 10px;
-  width: 50%;
-  margin: 40px auto 15px;
-}
-
-.search-input, .filter-select, .date-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  margin: 0 auto;
-}
-
-.date-input, .filter-select {
-  width: 15%;
-}
-
-.search-input {
-  width: 70%;
-}
-
 .reservation-container {
   max-width: 600px;
   margin: 20px auto;
@@ -33,14 +10,47 @@ h2 {
 
 .reservation-card {
   padding: 15px;
-  margin: 10px 0;
+  margin: 10px 0 4%;
+
   border-radius: 6px;
   background-color: #F6F6F4;
-
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
-p {
+.reservation-info {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.guest-info {
+  width: 48%;
+}
+
+.guest-info p {
+  margin: 5px 0;
+}
+
+.user-info {
+  width: 48%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.profile-picture {
+  width: 30%;
+  border-radius: 15px;
+  object-fit: cover;
+  margin-bottom: 10px;
+  align-self: center;
+}
+
+
+.user-info p {
   margin: 5px 0;
 }
 
@@ -52,25 +62,25 @@ p {
 .action-buttons {
   margin-top: 10px;
   display: flex;
+  justify-content: center;
   gap: 10px;
+}
+
+.approve-btn, .reject-btn {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .approve-btn {
   background: green;
   color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 
 .reject-btn {
   background: darkred;
   color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 
 .approve-btn:hover {
