--- a/frontend/src/app/features/reservation/reservation-review-component/reservation-review-component.component.html
+++ b/frontend/src/app/features/reservation/reservation-review-component/reservation-review-component.component.html
@@ -4,12 +4,19 @@
   </div>
 
   <div *ngFor="let rezervacija of rezervacije" class="reservation-card">
-    <p><strong>Gost:</strong> {{ rezervacija.guest.firstname }} {{ rezervacija.guest.lastname }}</p>
-    <p><strong>Email gosta:</strong> {{ rezervacija.guest.email }}</p>
-    <p><strong>Broj gostiju:</strong> {{ rezervacija.numberOfGuests }}</p>
-    <p><strong>Datum:</strong> {{ rezervacija.startDate }} - {{ rezervacija.endDate }}</p>
-    <p><strong>Cena:</strong> {{ rezervacija.price }} €</p>
-    <p><strong>Status:</strong> <span class="status">{{ rezervacija.status }}</span></p>
+    <div class="reservation-info">
+      <div class="guest-info">
+        <p><strong>Datum:</strong> {{ rezervacija.startDate }} - {{ rezervacija.endDate }}</p>
+        <p><strong>Broj gostiju:</strong> {{ rezervacija.numberOfGuests }}</p>
+        <p><strong>Cena:</strong> {{ rezervacija.price }} €</p>
+        <p><strong>Status:</strong> <span class="status">{{ rezervacija.status }}</span></p>
+      </div>
+      <div class="user-info">
+        <img [src]="rezervacija.guest.profilePic" alt="User Profile Picture" class="profile-picture">
+        <p><strong>Gost:</strong> {{ rezervacija.guest.firstname }} {{ rezervacija.guest.lastname }}</p>
+        <p><strong>Email gosta:</strong> {{ rezervacija.guest.email }}</p>
+      </div>
+    </div>
 
     <div class="action-buttons" *ngIf="rezervacija.status === 'PENDING'">
       <button class="approve-btn" (click)="updateReservation(rezervacija.id, 'approve')">Odobri</button>
