ima nekih bagova kod add apartment

--- a/frontend/src/app/features/apartment/add-apartment/add-apartment.component.html
+++ b/frontend/src/app/features/apartment/add-apartment/add-apartment.component.html
@@ -77,10 +77,10 @@
     </div>
 
     <div class="form-group">
-      <label for="price">Price:</label>
+      <label for="defaultPrice">Price:</label>
       <input
-        id="price"
-        formControlName="price"
+        id="defaultPrice"
+        formControlName="defaultPrice"
         type="number"
         placeholder="Enter price per night"
         class="form-control">
