--- a/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.css
+++ b/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.css
@@ -60,7 +60,7 @@
   transform: translateX(-50%);
   padding: 12px 30px;
   font-size: 16px;
-  background-color: #007bff;
+  background-color: #015E61;
   color: white;
   border: none;
   border-radius: 8px;
@@ -70,6 +70,6 @@
 }
 
 .reserve-button:hover {
-  background-color: #0056b3;
+  background-color: #013637;
 }
 
