--- a/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.css
+++ b/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.css
@@ -81,7 +81,7 @@ mat-form-field {
   margin: 0 auto;
   padding: 12px 30px;
   font-size: 16px;
-  background-color: #007bff;
+  background-color: #015E61;
   color: white;
   border: none;
   border-radius: 8px;
@@ -91,7 +91,7 @@ mat-form-field {
 }
 
 .reserve-button:hover{
-  background-color: #0056b3;
+  background-color: #015E61;
 }
 
 @keyframes fadeIn {
