--- a/frontend/src/app/shared/navbar/navbar.component.css
+++ b/frontend/src/app/shared/navbar/navbar.component.css
@@ -3,12 +3,15 @@
   display: flex;
   justify-content: center;
   width: 95%;
-  background-color: rgba(1, 94, 97, 0.5);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
   padding: 20px 0;
   margin: 0 auto;
   border-radius: 10px;
   z-index: 1;
+}
+
+.sidenav-green{
+  background-color: rgba(1, 94, 97, 0.7);
 }
 
 .sidenav a {
