--- a/frontend/src/app/features/delete-account/delete-account.component.css
+++ b/frontend/src/app/features/delete-account/delete-account.component.css
@@ -6,7 +6,7 @@
   margin: 7% auto;
   padding: 80px 20px;
   text-align: center;
-  color: white;
+  color: black;
   background-color: rgba(30, 30, 30, 0.1);
   backdrop-filter: blur(10px);
   border-radius: 8px;
