--- a/frontend/src/app/features/user-profile/user-profile.component.html
+++ b/frontend/src/app/features/user-profile/user-profile.component.html
@@ -20,7 +20,9 @@
   </div>
 
   <div class="form-group">
-    <label for="profilePicture">Add new profile picture:</label>
+    <label for="profilePicture">
+
+      Add new profile picture:</label>
     <input type="file" id="profilePicture" (change)="onFileSelected($event)" [disabled]="!isEditing" />
   </div>
 
