mislim da sam refaktorisala guest :")

--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -24,7 +24,7 @@
 
   <!-- Desna strana - 3/4 širine -->
   <div class="right-side" style="flex: 3; padding: 20px;">
-    <app-calendar [apartment]="apartment"></app-calendar>
+<!--    <app-calendar [apartment]="apartment"></app-calendar>-->
   </div>
 
 </div>
