--- a/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
@@ -44,11 +44,15 @@
 
       <div class="calendar">
         <h2>Select Reservation Date</h2>
-        <app-calendar
+
+        <app-guest-calendar
           [apartment]="data.accommodation"
           (reservedDaysLstChange)="updateReservedDaysNum($event)"
-          (fullPriceNum)="updateFullPrice($event)"
-        ></app-calendar>
+          (fullPriceNum)="updateFullPrice($event)">
+
+        >
+
+        </app-guest-calendar>
 
       </div>
     </div>
