--- a/frontend/src/app/features/calendar/calendar/calendar.component.html
+++ b/frontend/src/app/features/calendar/calendar/calendar.component.html
@@ -4,54 +4,9 @@
     <span>{{ currentMonth | date: 'MMMM yyyy' }}</span>
     <button (click)="nextMonth()">Next</button>
   </div>
-  <div *ngIf="user.userRole==='GUEST'">
-    <div class="calendar-grid">
-      <div class="calendar-day" *ngFor="let date of datesInMonth"
-           [class.selected]="isUnavailableDate(date)"
-           [class.srecni]="isSrecni(date)"
-           [class.reserved]="isReserved(date)"
-           [class.disabled]="isReserved(date)"
-           (mousedown)="onMouseDown(date)"
-           (mouseup)="onMouseUp()"
-           (mouseover)="onMouseOver(date)">
-
-        <span class="date">{{ date.getDate() }}</span>
-
-        <p *ngIf="specialPrices[getFormattedDate(date)]">
-          <small class="price">Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}</small>
-          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
-        </p>
-
-        <p *ngIf="!specialPrices[getFormattedDate(date)]">
-          <small class="price">Price: €{{apartment.defaultPrice}}</small>
-          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
-        </p>
-
-      </div>
+  <div class="calendar-grid">
+    <div class="calendar-day" *ngFor="let date of datesInMonth">
+      <span class="date">{{ date.getDate() }}</span>
     </div>
-
-  </div>
-
-  <div *ngIf="user.userRole==='HOST'">
-    <div class="calendar-grid">
-      <div class="calendar-day" *ngFor="let date of datesInMonth"
-           [class.selected]="isUnavailableDate(date)"
-           [class.reserved]="isReserved(date)"
-           [class.disabled]="isReserved(date)"
-           (mousedown)="onMouseDown(date)"
-           (mouseup)="onMouseUp()"
-           (mouseover)="onMouseOver(date)">
-
-        <span class="date">{{ date.getDate() }}</span>
-        <p *ngIf="specialPrices[getFormattedDate(date)]">
-          <small class="price">Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}</small>
-        </p>
-        <p *ngIf="!specialPrices[getFormattedDate(date)]">
-          <small class="price">Price: €400</small>
-        </p>
-
-      </div>
-    </div>
-
   </div>
 </div>
