--- a/frontend/src/app/features/calendar/pages/host-calendar/host-calendar.component.html
+++ b/frontend/src/app/features/calendar/pages/host-calendar/host-calendar.component.html
@@ -1,1 +1,23 @@
-<p>host-calendar works!</p>
+<div class="calendar-container">
+  <div class="calendar-header">
+    <button (click)="prevMonth()">Prev</button>
+    <span>{{ currentMonth | date: 'MMMM yyyy' }}</span>
+    <button (click)="nextMonth()">Next</button>
+  </div>
+  <div class="calendar-grid">
+    <div class="calendar-day" *ngFor="let date of datesInMonth"
+         [class.selected]="isUnavailableDate(date)"
+         [class.reserved]="isReserved(date)"
+         (click)="toggleDateSelection(date)">
+
+      <span class="date">{{ date.getDate() }}</span>
+      <p *ngIf="specialPrices[getFormattedDate(date)]">
+        <small class="price">Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}</small>
+      </p>
+      <p *ngIf="!specialPrices[getFormattedDate(date)]">
+        <small class="price">Price: €400</small>
+      </p>
+
+    </div>
+  </div>
+</div>
