--- a/frontend/src/app/features/calendar/pages/host-calendar/host-calendar.component.css
+++ b/frontend/src/app/features/calendar/pages/host-calendar/host-calendar.component.css
@@ -61,7 +61,7 @@
 
 .calendar-day.selected {
   font-weight: bold;
-  background-color: hotpink;
+  background-color: dimgray;
   color: white;
 }
 
