--- a/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.html
+++ b/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.html
@@ -4,28 +4,24 @@
     <span>{{ currentMonth | date: 'MMMM yyyy' }}</span>
     <button (click)="nextMonth()">Next</button>
   </div>
-  <div class="calendar-container">
-    <div class="calendar-grid">
-      <div class="calendar-day" *ngFor="let date of datesInMonth"
-           [class.selected]="isSrecni(date)"
-           (click)="toggleDateSelection(date)">
+  <div class="calendar-grid">
+    <div class="calendar-day" *ngFor="let date of datesInMonth"
+         [class.selected]="isSrecni(date)"
+         (click)="toggleDateSelection(date)">
 
-        <span class="date">{{ date.getDate() }}</span>
+      <span class="date">{{ date.getDate() }}</span>
 
-        <p *ngIf="specialPrices[getFormattedDate(date)]">
-          <small class="price special-price">  Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}
-          </small>
-          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
-        </p>
+      <p *ngIf="specialPrices[getFormattedDate(date)]">
+        <small class="price special-price">  Price: {{ specialPrices[getFormattedDate(date)] | currency:'EUR' }}
+        </small>
+        <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
+      </p>
 
-        <p *ngIf="!specialPrices[getFormattedDate(date)]">
-          <small class="price"> €{{apartment.defaultPrice}}
-          </small>
-          <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
-        </p>
+      <p *ngIf="!specialPrices[getFormattedDate(date)]">
+        <small class="price">€{{apartment.defaultPrice}}</small>
+        <small class="smaller-text">  {{apartment.pricingMethod | pricingMethodFormat}}</small>
+      </p>
 
-      </div>
     </div>
   </div>
-
 </div>
