--- a/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.css
+++ b/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.css
@@ -61,7 +61,7 @@
 
 .calendar-day.selected {
   font-weight: bold;
-  background-color: hotpink;
+  background-color: #015E61;
   color: white;
 }
 
@@ -85,12 +85,17 @@
   pointer-events: none;
 }
 
-.calendar-day.reserved:hover {
-  background-color: #B80C09;
+.calendar-day.unavailable {
+  font-weight: bold;
+  color: white;
+  background-color: #333;
+  opacity: 0.6;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .calendar-day.selected:hover {
-  background-color: darkgray;
+  background-color: #013637;
 }
 
 .date {
