--- a/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.html
+++ b/frontend/src/app/features/calendar/pages/guest-calendar/guest-calendar.component.html
@@ -7,6 +7,8 @@
   <div class="calendar-grid">
     <div class="calendar-day" *ngFor="let date of datesInMonth"
          [class.selected]="isSrecni(date)"
+         [class.reserved]="isReserved(date)"
+         [class.unavailable]="isUnavailableDate(date)"
          (click)="toggleDateSelection(date)">
 
       <span class="date">{{ date.getDate() }}</span>
