--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.css
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.css
@@ -16,12 +16,11 @@
 .container {
   display: flex;
   height: 100%;
-  max-height: 450px;
-  border: solid;
+  max-height: 500px;
 }
 
 .left-side {
-  flex: 1.5;
+  flex: 2.5;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -33,7 +32,7 @@
 }
 
 .right-side {
-  flex: 2.5;
+  flex: 2;
   padding: 20px;
 }
 
@@ -86,16 +85,27 @@
   background-color: #707070;
 }
 
-button {
-  padding: 10px 20px;
-  background-color: #4caf50;
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.button-container button{
+  background-color: green;
   color: white;
+}
+
+button {
+  display: block;
+  width: 12%;
+  padding: 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
+  color: #555;
+  font-size: 1em;
   cursor: pointer;
   margin-top: 20px;
 }
 
-button:hover {
-  background-color: #45a049;
-}
+
