--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -43,8 +43,7 @@
         </div>
 
         <div class="button-container">
-          <button style="background-color: green; color: white" (click)="saveApartment()">Save</button>
-          <button style="background-color: #B80C09; color: white" (click)="cancelEdit()">Cancel</button>
+          <button (click)="saveApartment()">Save</button>
         </div>
       </div>
 
@@ -89,13 +88,13 @@
 
         <div class="button-container">
           <button style="background-color: green; color: white" (click)="saveApartment()">Save</button>
-          <button style="background-color: #B80C09; color: white" (click)="cancelEdit()">Cancel</button>
         </div>
       </div>
 
       <div *ngIf="selectedSection === 'pricing'">
         <h2>Edit Pricing</h2>
         <app-pricing-and-availability [apartment]="apartment"></app-pricing-and-availability>
+
       </div>
 
       <div *ngIf="selectedSection === 'availability'">
