dodat mode za pricing and availability

--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -33,6 +33,7 @@
   <div class="right-side">
     <app-host-calendar
       [apartment]="apartment"
+      mode="pricing"
     ></app-host-calendar>
   </div>
 
