--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -101,6 +101,7 @@
         <h2>Edit Availability</h2>
         <app-host-calendar
           [apartment]="apartment"
+          mode="availability"
         ></app-host-calendar>
 
       </div>
