--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -1,46 +1,29 @@
-<div>
-  <div class="container">
-    <!-- Leva strana - 1/4 širine -->
-    <div class="left-side">
-      <div class="form-group">
-        <label for="price">Price</label>
-        <input type="number" id="price" class="form-control" [(ngModel)]="price" />
-      </div>
-
-      <div class="form-group">
-        <label for="cancellationDeadline">Cancellation Deadline (days)</label>
-        <input type="number" id="cancellationDeadline" class="form-control" [(ngModel)]="cancellationDeadline" />
-      </div>
-
-
-      <div class="form-group">
-        <label>Pricing Method</label>
-        <div class="pricing-method-options">
-          <label for="perGuest" class="custom-radio">
-            <input type="radio" id="perGuest" [(ngModel)]="pricingMethod" value="perGuest" />
-            <span>Per Guest</span>
-          </label>
-          <label for="perUnit" class="custom-radio">
-            <input type="radio" id="perUnit" [(ngModel)]="pricingMethod" value="perUnit" />
-            <span>Per Unit</span>
-          </label>
-        </div>
-      </div>
-
+<div class="container">
+  <div class="left-side">
+    <div class="form-group">
+      <label for="price">Price</label>
+      <input type="number" id="price" class="form-control" [(ngModel)]="price" name="price" required />
     </div>
 
-  <!-- Desna strana - 3/4 širine -->
-  <div class="right-side">
-    <app-host-calendar
-      [apartment]="apartment"
-      mode="pricing"
-    ></app-host-calendar>
-  </div>
+    <div class="form-group">
+      <label for="cancellationDeadline">Cancellation Deadline (days)</label>
+      <input type="number" id="cancellationDeadline" class="form-control" [(ngModel)]="cancellationDeadline" name="cancellationDeadline" [value]="apartment?.cancellationDeadline" />
+    </div>
 
-
+    <div class="form-group">
+      <label>Pricing Method</label>
+      <div class="pricing-method-options">
+        <label for="perGuest" class="custom-radio">
+          <input type="radio" id="perGuest" [(ngModel)]="pricingMethod" value="perguest" name="pricingMethod" required />
+          <span>Per Guest</span>
+        </label>
+        <label for="perUnit" class="custom-radio">
+          <input type="radio" id="perUnit" [(ngModel)]="pricingMethod" value="perunit" name="pricingMethod" />
+          <span>Per Unit</span>
+        </label>
+      </div>
+    </div>
+  </div>  <div class="right-side">
+  <app-host-calendar [apartment]="apartment" mode="pricing" (pricingDatesSelected)="onPricingDatesSelected($event)" #hostCalendar></app-host-calendar>
 </div>
-
-  <div class="button-container">
-    <button (click)="sendToBackend()">Save</button>
-  </div>
 </div>
