--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="left-side">
     <form #pricingForm="ngForm">  <div class="form-group">
-      <label for="price">Price</label>
-      <input type="number" id="price" class="form-control" [(ngModel)]="price" name="price" required />
-    </div>
+      <label for="price">Price: </label>
+      <input type="number" id="price" class="form-control" [(ngModel)]="price" name="price" required
+             [value]="apartment?.defaultPrice" />
+
+  </div>
 
       <div class="form-group">
         <label for="cancellationDeadline">Cancellation Deadline (days)</label>
