--- a/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="right-section">
     <div class="map-container">
-      <app-map-section></app-map-section>
+      <app-map-section [apartment]="accommodation"></app-map-section>
     </div>
     <div class="amenities-info">
       <app-amenities-info></app-amenities-info>
