--- a/frontend/src/app/features/apartment/apartment-view-guest/apartment-details/apartment-details.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/apartment-details/apartment-details.component.html
@@ -7,12 +7,10 @@
       </h2>
     </div>
     <div class="location">
-      <h2>565 Broome Str, NY</h2>
+      <h2>{{accommodation.location}}</h2>
     </div>
     <div class="action-icons">
-      <i class="fa fa-share-alt"></i>
       <i class="fa fa-heart"></i>
-      <i class="fa fa-ellipsis-h"></i>
     </div>
   </div>
 
@@ -20,22 +18,22 @@
 
   <div class="property-content">
     <div class="menu">
-      <i class="fa fa-info-circle"></i>
-      <i class="fa fa-car"></i>
+      <i class="fa fa-info-circle" (click)="showDetails()"></i>
       <i class="fa fa-wallet"></i>
-      <i class="fa fa-home"></i>
+      <i class="fa fa-home" (click)="showDescription()"></i>
       <i class="fa fa-chart-pie"></i>
     </div>
 
     <div class="details">
       <h1>{{ accommodation.name }}</h1>
-      <ul class="property-details">
+
+      <ul class="property-details" *ngIf="displayDetails">
         <li><i class="fa fa-users"></i> Kapacitet: {{ accommodation.minGuests }} - {{ accommodation.maxGuests }} gostiju</li>
         <li><i class="fa fa-home"></i> Tip: {{ accommodation.type }}</li>
-        <li><i class="fa fa-expand"></i> Površina: 1,024 ft²</li>
       </ul>
-      <p class="description">{{ accommodation.description }}</p>
-<!--      <button (click)="goBack()" class="go-back-btn">Go Back</button>-->
+
+      <p class="description" *ngIf="displayDescription">{{ accommodation.description }}</p>
+
     </div>
   </div>
 </div>
